--- a/Reference.iOS/Info.plist
+++ b/Reference.iOS/Info.plist
@@ -23,15 +23,15 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>Reference</string>
+    <string>VADisabilityCalculator</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.Reference</string>
+    <string>com.companyname.VADisabilityCalculator</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>Reference</string>
+    <string>VADisabilityCalculator</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
