--- a/Reference.Android/VADisabilityCalculator.Android.csproj
+++ b/Reference.Android/VADisabilityCalculator.Android.csproj
@@ -99,6 +99,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomLabelRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
