Switch is working, need to adjust Pickers

--- a/Reference.Android/VADisabilityCalculator.Android.csproj
+++ b/Reference.Android/VADisabilityCalculator.Android.csproj
@@ -95,6 +95,9 @@
     <PackageReference Include="SegmentedControl.FormsPlugin">
       <Version>2.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.Buttons">
+      <Version>21.2.8</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
   </ItemGroup>
