--- a/Reference.iOS/VADisabilityCalculator.iOS.csproj
+++ b/Reference.iOS/VADisabilityCalculator.iOS.csproj
@@ -139,6 +139,9 @@
     <PackageReference Include="NETStandard.Library">
       <Version>2.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.Buttons">
+      <Version>21.2.8</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
   </ItemGroup>
