--- a/Reference/VADisabilityCalculator.csproj
+++ b/Reference/VADisabilityCalculator.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="SegmentedControl.FormsPlugin" Version="2.0.1" />
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="21.2.8" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.6" />
     <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.6" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
